<resources>
    <string name="app_name">Stats</string>
    <string name="newPlayerText">SteamID or the end of Custom URL</string>
    <string name="remove">Delete</string>
    <string name="playerName">Bocko</string>
    <string name="new_player">Add A New Player</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="stat">Stats</string>
    <string name="chart">Charts</string>
    <string name="id">ID64:</string>
    <string name="link">Profile Link:</string>
    <string name="edit">Edit</string>
    <string name="total_number_of_kills">Kills:</string>
    <string name="total_number_of_deaths">Deaths:</string>
    <string name="total_number_of_headshots">Headshots:</string>
    <string name="total_number_of_hours_played">Hours Played:</string>
    <string name="total_number_of_shots_fired">Shots Fired:</string>
    <string name="total_number_of_shots_hit">Shots Hit:</string>
    <string name="total_number_of_money_earned">Money Earned:</string>
    <string name="total_number_of_damage">Damage Done:</string>
    <string name="total_number_of_bombs_defused">Bombs Defused:</string>
    <string name="total_number_of_bomb_planted">Bombs Planted:</string>
    <string name="mvps_earned">MVPs Earned:</string>
    <string name="kill_death_ratio">Kill/Death Ratio</string>
    <string name="accuracy">Accuracy</string>
    <string name="headshot_accuarcy">Headshot Accuracy</string>
    <string name="profile_state">Profile State:</string>
    <string name="visibility_state">Visibility State:</string>
    <string name="friendlist">Friends</string>
    <string name="profile_comm_ban">Community Banned:</string>
    <string name="profile_vac_ban">Vac Banned:</string>
    <string name="profile_num_vac_ban">Number Of VAC Bans:</string>
    <string name="profile_vac_ban_days">Days Since Last Ban:</string>
    <string name="profile_num_ban">Number Of Game Bans:</string>
    <string name="profile_trade_ban">Trade Ban:</string>
    <string name="profilepic">ProfilePic</string>
    <string name="banned">Banned</string>
    <string name="bannedNone">None</string>
    <string name="inventory">Inventory</string>
    <string name="itemName">Inventory Item Name</string>
    <string name="itemAmount">Amount:</string>
    <string name="friendpic">FriendPic</string>
    <string name="deletebutton">DeleteButton</string>
    <string name="load_inventory">Press to Load Inventory</string>
    <string name="private_inventory">PRIVATE INVENTORY</string>
    <string name="private_friends">PRIVATE FRIENDS</string>
    <string name="private_stats">PRIVATE STATS</string>
    <string name="player_statistics">PLAYER STATISTICS</string>
    <string name="map_statistics">MAP STATISTICS</string>
    <string name="itempic">ItemPic</string>
    <string name="steamid_url">7656XXXXXXXXXXXXX/URL</string>
    <string name="playerpic">playerpic</string>
    <string name="rounds_played">Rounds Played:</string>
    <string name="rounds_won">Rounds Won:</string>
    <string name="dust2">Dust 2:</string>
    <string name="inferno">Inferno:</string>
    <string name="nuke">Nuke:</string>
    <string name="train">Train:</string>
    <string name="add_new_player">Add New Player</string>
    <string name="add">Add</string>
    <string name="lowest_price">Lowest Price:</string>
    <string name="median_price">Median Price:</string>
    <string name="number_of_units_on_market">Number Of Sold On Market(24 hrs):</string>
    <string name="not_found">NOT FOUND</string>
    <string name="sticker">sticker</string>
    <string name="floatValue">Float:</string>
    <string name="paint_seed">Paint Seed:</string>
    <string name="origin">Origin Of The Item:</string>
    <string name="float_range">Possible Float Range:</string>
    <string name="market">MARKET:</string>
    <string name="item">ITEM:</string>
    <string name="level">Profile Level:</string>
    <string name="privateTag">Private</string>
    <string name="playtime">Play Time:</string>
    <string name="gameName">Game name</string>
    <string name="recently_played_games">Recently Played Games</string>
    <string name="foreverhours">%s hrs on record</string>
    <string name="twoweekshours">%s hrs in last 2 weeks</string>
    <string name="view_whole_library">View Whole Library</string>
    <string name="amountx">Amount: %s</string>
    <string name="playingx">Playing: %s</string>
    <string name="floatRange">%s - %s</string>
    <string name="sort">Sort:</string>
    <string name="search">Search</string>
    <string name="profile_add_button">ProfileAddButton</string>
    <string-array name="gamesSortArray">
        <item>Name Asc</item>
        <item>Name Desc</item>
        <item>Total Play Time Asc</item>
        <item>Total Play Time Desc</item>
    </string-array>
    <string-array name="friendsSortArray">
        <item>Name Asc</item>
        <item>Name Desc</item>
    </string-array>
    <string-array name="inventorySortArray">
        <item>Rarity Desc</item>
        <item>Rarity Asc</item>
        <item>Name Asc</item>
        <item>Name Desc</item>
    </string-array>
</resources>