<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkgrey">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/private_stats"
        android:textSize="30sp"
        android:gravity="center"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/svCharts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkgrey"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/kill_death_ratio"
                android:textSize="30sp"
                android:padding="5dp"
                android:layout_marginBottom="25dp"
                android:background="@color/middlegray"/>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieKD"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/accuracy"
                android:textSize="30sp"
                android:padding="5dp"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="30dp"
                android:background="@color/middlegray"/>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieAccu"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/headshot_accuarcy"
                android:textSize="30sp"
                android:padding="5dp"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="30dp"
                android:background="@color/middlegray"/>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieHSAccu"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>