<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/darkGrey">

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/private_friends"
        android:textSize="30sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llFriends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="search"
            android:backgroundTint="@color/lightGray"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/lightGray"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/SSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:popupBackground="@color/middleGray" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFriends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkGrey"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_friend" />

    </LinearLayout>

</LinearLayout>