<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llBg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivItemImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/darkgrey"
        android:padding="5dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvLP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/lowest_price"/>
        <TextView
            android:id="@+id/tvItemLP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tvMP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/median_price"/>
        <TextView
            android:id="@+id/tvItemMP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tvVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/number_of_units_on_market"/>
        <TextView
            android:id="@+id/tvItemVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

</LinearLayout>